--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "readmegenerator",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "color": "^4.2.3",
+    "inquirer": "^9.2.23"
+  }
 }
